# csv_interpolate

./: README.md  pyproject.toml
src/csv_interpolate/: __init__.py  cli.py  interp_methods.py  test_interp.py
